...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Make">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/make_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Model">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/model_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

...
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/baseline_photo_camera_24"
            app:endIconContentDescription="Scan serial number"
            android:hint="Serial Number (optional)">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/serial_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Estimated Value">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/value_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="0123456789."
                />

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Date of Purchase">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_purchased_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:cursorVisible="false"/>
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Comment">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comment_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_item_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Add"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton"
...
