...
    <item
        android:id="@+id/action_scan_barcode"
        android:title="Scan barcode"
        android:icon="@drawable/barcode_scan_icon"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_sort_and_filter"
        android:title="Sort and filter"
        android:icon="@drawable/baseline_sort_24"
        app:showAsAction="always"/>
</menu>
